--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8"> <link rel="stylesheet" type="text/css" href="\Users\fgiro\Downloads\Snake-Myths-n-Facts\css\snake.css" />
+<meta charset="UTF-8"> <link rel="stylesheet" type="text/css" href="css/snake.css" />
 <title>Snake n Myths</title>
 	
 	<style type="text/css">
@@ -21,7 +21,7 @@
 	<main>
 					<!-- includes image and general text about given site <-->
 				<section> 
-					<img src="\Users\fgiro\Downloads\Snake-Myths-n-Facts\images\snake-background.jpg" alt="the snake and myth mockup photo" />
+					<img src="https://raw.githubusercontent.com/1AlessandraG/images/snake-background.jpg" alt="the snake and myth mockup photo" />
 														   
 														   
 				</section>
