--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	
 </head>
 	<nav>
-			<a style= "color: #876246;" href ="snakes_n_myths.com/about">About</a> 
-			<a style= "color: #788757;" href ="snakes_n_myths.com/directory">Common Snakes</a> 
-			<a style= "color: #876246;" href ="snakes_n_myths.com/myths">Myths</a> 
+			<a style= "color: #876246;" href ="/snakenmyths-webpage//about">About</a> 
+			<a style= "color: #788757;" href ="/snakenmyths-webpage//snakes">Common Snakes</a> 
+			<a style= "color: #876246;" href ="/snakenmyths-webpage//myths">Myths</a> 
           
 		</nav>		 
 				 
