--- a/myths.html
+++ b/myths.html
@@ -12,7 +12,7 @@
 	
 	<nav>
 			<a style= "color: #876246;" href ="/snakenmyths-webpage//about">About</a> 
-			<a style= "color: #788757;" href ="/snakenmyths-webpage//snakes">Snakes</a> 
+			<a style= "color: #788757;" href ="/snakenmyths-webpage//snakes">Common Snakes</a> 
 			<a style= "color: #876246;" href ="/snakenmyths-webpage//myths">Myths</a> 
                
 		</nav>		 
