--- a/snakes.html
+++ b/snakes.html
@@ -28,7 +28,7 @@
       
 	<div class="section-background-left">
         <div class="image">
-            <img src="https://raw.githubusercontent.com/1AlessandraG/snakenmyths-webpage/images/hognose.jpg" class="hognose" alt="Your Image">
+            <img src="/snakenmyths-webpage/images/hognose.jpg" class="hognose" alt="Your Image">
         </div>
 		 <div class="text">
             <p>Hognose snake (Heterodon, Dipsadinae family) <p>
@@ -41,7 +41,7 @@
       
 	<div class="section-background-right">
         <div class="image">
-            <img src="https://raw.githubusercontent.com/1AlessandraG/snakenmyths-webpage/images/boa.jpg" class="boa" alt="Your Image">
+            <img src="/snakenmyths-webpage/images/boa.jpg" class="boa" alt="Your Image">
         </div>
 		 <div class="text">
             <p>Boa constrictor (Boidae family) <p>
@@ -52,7 +52,7 @@
 		</div>
 		<div class="section-background-left">
 		<div class="image">
-            <img src="https://raw.githubusercontent.com/1AlessandraG/snakenmyths-webpage/images/king.jpg" class="king" alt="Your Image">
+            <img src="/snakenmyths-webpage/images/king.jpg" class="king" alt="Your Image">
         </div>
 		 <div class="text">
             <p>Kingsnakes (Colubridae family) <p>
@@ -63,7 +63,7 @@
 		</div>
 		<div class="section-background-right">
 		<div class="image">
-            <img src="https://raw.githubusercontent.com/1AlessandraG/snakenmyths-webpage/images/garter.jpg" class="garter" alt="Your Image">
+            <img src="/snakenmyths-webpage/images/garter.jpg" class="garter" alt="Your Image">
         </div>
 		 <div class="text">
             <p>Garter snake ( Colubridae family) <p>
@@ -74,7 +74,7 @@
 		</div>
 		<div class="section-background-left">
 		<div class="image">
-            <img src="https://raw.githubusercontent.com/1AlessandraG/snakenmyths-webpage/images/corn.jpg" class="corn" alt="Your Image">
+            <img src="/snakenmyths-webpage/images/corn.jpg" class="corn" alt="Your Image">
         </div>
 		 <div class="text">
             <p>Corn snakes (Colubridae family) <p>
@@ -85,7 +85,7 @@
 		</div>
 		<div class="section-background-right">
 		<div class="image">
-            <img src="https://raw.githubusercontent.com/1AlessandraG/snakenmyths-webpage/images/ball.jpg" class="ball" alt="Your Image">
+            <img src="/snakenmyths-webpage/images/ball.jpg" class="ball" alt="Your Image">
         </div>
 		 <div class="text">
             <p>ball python ( Pythonidae family ) <p>
@@ -96,7 +96,7 @@
 		</div>
 		<div class="section-background-left">
 		<div class="image">
-            <img src="https://raw.githubusercontent.com/1AlessandraG/snakenmyths-webpage/images/burmese.jpg" class="burmese" alt="Your Image">
+            <img src="/snakenmyths-webpage/images/burmese.jpg" class="burmese" alt="Your Image">
         </div>
 		 <div class="text">
             <p>Burmese Pythons (Pythonidae family) <p>
